syntax = "proto3";

package resolve_error;

enum ResolveError {
  UNKNOWN_ERROR = 0;
  NAME_NOT_RESOLVED = 1; // DNS cannot resolve the given URL
  INVALID_URL = 2; // Malformed URL
  NOT_REACHABLE = 3; // The target URL cannot be reached at all
  UNSUPPORTED = 4; // File download, etc
  HTTPS_ERROR = 5; // HTTPS related error, such as invalid certificates
  UNKNOWN_SCRAP_ERROR = 6;
  UNKNOWN_YOUTUBE_ERROR = 7;
}